# ggr

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  disposable_notice.txt
source/: CMakeLists.txt
source/accelerators/: CMakeLists.txt  accelerator.h  bb-accelerator.cpp  bb-accelerator.h  bounding-box.cpp  bounding-box.h
source/bsdfs/: bsdf-sample.cpp  bsdf-sample.h  bsdf.cpp  bsdf.h  bxdf.cpp  bxdf.h  diffuse-brdf.cpp  diffuse-brdf.h  emission-bxdf.cpp  emission-bxdf.h  fresnel.cpp  fresnel.h  microfacet-brdf.cpp  microfacet-brdf.h  microfacet-btdf.cpp  microfacet-btdf.h  microfacet-distribution.cpp  microfacet-distribution.h  refraction-btdf.cpp  refraction-btdf.h  specular-brdf.cpp  specular-brdf.h
source/cameras/: CMakeLists.txt  camera-sample.cpp  camera-sample.h  camera.cpp  camera.h  orthographic-camera.cpp  orthographic-camera.h  perspective-camera.cpp  perspective-camera.h  projective-camera.cpp  projective-camera.h
source/core/: CMakeLists.txt  render-settings.cpp  render-settings.h  renderer.cpp  renderer.h  scene.cpp  scene.h
source/entities/: CMakeLists.txt  entity.cpp  entity.h  light-entity.cpp  light-entity.h
source/film/: CMakeLists.txt  film-sample.cpp  film-sample.h  film.cpp  film.h  unfiltered-film-tile.cpp  unfiltered-film-tile.h
source/filters/: CMakeLists.txt  box-filter.cpp  box-filter.h  filter.cpp  filter.h  gaussian-filter.cpp  gaussian-filter.h  lanczos-filter.cpp  lanczos-filter.h
source/images/: CMakeLists.txt  checkerboard-image.cpp  checkerboard-image.h  image-io.cpp  image-io.h  image.cpp  image.h  mipmap.cpp  (+1 more)
(+141 files in other folders)
