add_subdirectory(primitives)
add_subdirectory(tools)
Add_subdirectory(cameras)
add_subdirectory(images)
add_subdirectory(filters)
add_subdirectory(samplers)
add_subdirectory(film)
add_subdirectory(meshes)
add_subdirectory(intersection)
add_subdirectory(textures)
add_subdirectory(shaders)
add_subdirectory(lighting)
add_subdirectory(materials)
add_subdirectory(entities)
add_subdirectory(accelerators)
add_subdirectory(integrators)
add_subdirectory(core)

